2007-10-31  Jeff Hobbs  <jeffh@ActiveState.com>

	* tooltip.tcl: added fading (default on for Win32/Aqua) of tooltip
	* tooltip.man: instead of just withdraw. [Bug 1641071]

2007-09-22  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tooltip.tcl (::tooltip::show): Left align the tooltip text
	* pkgIndex.tcl:                  (reported by Peter Caffin)
	* tooltip.man:                   Bumped to 1.4
	Generally improved the manual to fix bug #1800296.

2007-05-18  Jeff Hobbs  <jeffh@ActiveState.com>

	* tooltip.man, pkgIndex.tcl: bumped version to 1.3
	* tooltip.tcl (::tooltip::show): Use late-binding msgcat (lazy
	translation) to support programs that allow on-the-fly l10n
	changes.  Requires msgcat package (Tk uses this already). (poser)

2007-02-07  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tooltip.tcl:  Added support for tooltips on text widget tags
	                (useful for tkchat url links). Fixed menu tooltips.
	* tooltip.man:  Added documentation.
	* pkgIndex.tcl: Incremented version to 1.2

2006-08-02  Jeff Hobbs  <jeffh@ActiveState.com>

	* tooltip.tcl (::tooltip::show): better handle boundary case
	considering Tk's odd multi-monitor screen dimension handling.
	AS bug 48498.

2006-03-31  Andreas Kupries <andreask@activestate.com>

	* tipstack.tcl (::tipstack::clearsub): Superfluous argument to
	  call of 'clear' removed.

2005-11-21  Jeff Hobbs  <jeffh@ActiveState.com>

	* tooltip.tcl (::tooltip::show): focus back to previous item, not
	the widget we are over.

2005-11-10  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tklib 0.4.1 ========================
	* 

2005-11-02  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tklib 0.4 ========================
	* 

2005-08-12  Andreas Kupries <andreask@activestate.com>

	* tooltip.man: Added module/title descriptions to the manpage.

2005-08-11  Jeff Hobbs  <jeffh@ActiveState.com>
